--- a/app/src/main/res/layout/create.xml
+++ b/app/src/main/res/layout/create.xml
@@ -4,7 +4,19 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".CreateFragment">
+    tools:context=".CreateFragment"
+    android:fitsSystemWindows="true">
+
+    <TextView
+        android:id="@+id/instructions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/barcode_instructions_label"
+
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+    />
 
     <TextView
         android:id="@+id/scannerLink"
@@ -15,9 +27,9 @@
         android:clickable="true"
         android:focusable="true"
 
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/instructions"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/instructions"
         />
 
     <TextView
@@ -29,8 +41,8 @@
         android:clickable="true"
         android:focusable="true"
 
-        app:layout_constraintTop_toBottomOf="@id/scannerLink"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/instructions"
+        app:layout_constraintStart_toStartOf="@id/instructions"
         app:layout_constraintEnd_toEndOf="parent"
 
         />
@@ -47,13 +59,6 @@
         app:layout_constraintTop_toBottomOf="@id/inputLink"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
-
-    <androidx.camera.view.PreviewView
-        android:id="@+id/scannerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
