--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,46 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".CameraActivity"
-    android:fitsSystemWindows="true">
+    tools:layout="@layout/content_main">
 
-    <com.journeyapps.barcodescanner.BarcodeView
-        android:id="@+id/scannerView"
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-    />
-
-    <androidx.camera.view.PreviewView
-        android:id="@+id/cameraView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-    />
-
-    <Button
-        android:id="@+id/capture_button"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/capture"
-        android:layout_centerInParent="true"
+        android:fitsSystemWindows="true">
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="gone"
-        />
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize" />
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/CreateFragment"
-        android:name="dev.adamico.zma.CreateFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:label="@string/create_fragment_label"
-        tools:layout="@layout/create"
-    />
+    </com.google.android.material.appbar.AppBarLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/content_main" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
