--- a/app/src/main/res/layout/fragment_zip.xml
+++ b/app/src/main/res/layout/fragment_zip.xml
@@ -29,7 +29,7 @@
         android:id="@+id/createButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/create"
+        android:text="@string/create_zip"
         android:layout_marginBottom="48dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
