--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -46,16 +46,23 @@
 
         />
 
-    <TextView
-        android:id="@+id/barcodeValue"
+    <LinearLayout
+        android:id="@+id/barcodeValueLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
+
         app:layout_constraintTop_toBottomOf="@id/instructions"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10dp"
-        android:visibility="gone"
-    />
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:id="@+id/barcodeValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+        />
+    </LinearLayout>
 
     <Button
         android:id="@+id/addImageButton"
@@ -63,37 +70,65 @@
         android:layout_height="wrap_content"
         android:text="@string/add_picture"
         android:layout_centerInParent="true"
+        android:layout_marginTop="10dp"
         android:visibility="gone"
 
-        app:layout_constraintTop_toBottomOf="@id/imageNames"
+        app:layout_constraintTop_toBottomOf="@id/imageRecyclerView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
     />
 
-    <TextView
-        android:id="@+id/imageNames"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/imageRecyclerView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:visibility="gone"
+        android:padding="8dp"
 
-        app:layout_constraintTop_toBottomOf="@id/barcodeValue"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-    />
+        app:layout_constraintTop_toTopOf="@id/barcodeValueLayout"
+        />
 
-    <Button
-        android:id="@+id/doneButton"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        style="?android:attr/buttonBarStyle"
+        android:id="@+id/containerOptionsLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="48dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone"
 
-        android:text="@string/done"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-    />
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <Button
+            android:id="@+id/deleteButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
+            android:text="@string/delete_container"
+        />
+
+        <Button
+            android:id="@+id/doneButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/done"
+        />
+
+        <Button
+            android:id="@+id/changeButton"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:text="@string/rename_container"
+        />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/inputLayout"
