--- a/app/src/main/res/layout/image_layout.xml
+++ b/app/src/main/res/layout/image_layout.xml
@@ -22,7 +22,7 @@
         android:id="@+id/imageRemoveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_cancel"
+        android:src="@drawable/ic_delete"
         android:contentDescription="@string/wrong"
         android:background="?android:attr/selectableItemBackground"
         />
